css/ui.css
body {
    padding-bottom: 50px;
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-weight: 300;
    background-color: rgba(0, 0, 0);
    position: relative;
    overflow-y: auto;
    overflow-x: hidden;
}

#home {
  background-image: url('../img/website_photos-1007-xsm.jpg');
  background-repeat: no-repeat;
  background-color: black;
  background-position-x: center;
  background-position-y: top;
  background-size: cover;
  height: calc(100vh - 115px);
}

#top {
  height: 115px;
  content: "";
  display: block;
}

.section:before {
  height: 75px;
  content: "";
  display:block;
}

i.fab {
  color: rgb(0, 0, 0, .85);
  font-size: 36px;
  padding-left: 10px;
}

.grey_background {
    background: rgba(15, 15, 15);
    position: relative;
    padding: 30px 0;
    color: #ccc;
    letter-spacing: 1px;
}

.black_background {
    background: rgba(0, 0, 0);
    position: relative;
    padding: 30px 0;
    color: #ccc;
    letter-spacing: 1px;
}

.nav-link {
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 8px;
  padding-right: 8px;
  font-weight: 900;
  font-size: .9em;
}

.push_fm {
  width: 300px;
  height: 940px;
  overflow: hidden;
  scroll: none;
  border: none;
}

.push_fm_presave {
  width: 300px;
  height: 525px;
  overflow: hidden;
  scroll: none;
  border: none;
}

.youtube_kicked {
  width: 560px;
  height: 315px;
  overflow: hidden;
  scroll: none;
}

.section_header {
  padding-top: 50px;
}

.height-250 {
  height: 250px;
}

.margin-bottom-minus-navbar {
  margin-bottom: -51px;
}

.coming_soon {
  height: 300px;
}

/* Photos carousel */

.carousel-inner {
	height: 100%;
  padding-top: 65%;
	display: block;
	position: relative;
  content: "";
}

/*.carousel-inner {
	padding-top: 48%;
	display: block;
	content: "";
}*/

.carousel-item {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	background: transparent;
	background: no-repeat center center scroll;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

.carousel-item-1 {
  background:transparent url('../img/website_photos-1008-xsm.jpg') no-repeat top center /cover;
}

.carousel-item-2 {
  background:transparent url('../img/website_photos-1005-xsm.jpg') no-repeat center center /cover;
}

.carousel-item-3 {
  background:transparent url('../img/website_photos-1009-xsm.jpg') no-repeat top center /cover;
}

.carousel-item-4 {
  background:transparent url('../img/website_photos-1006-xsm.jpg') no-repeat top center /cover;
}

.carousel-item-5 {
  background:transparent url('../img/website_photos-1003-xsm.jpg') no-repeat center center /cover;
}

.carousel-item-6 {
  background:transparent url('../img/website_photos-1002-xsm.jpg') no-repeat center center /cover;
}

.carousel-item-7 {
  background:transparent url('../img/website_photos-1004-xsm.jpg') no-repeat center center /cover;
}

.carousel-item-8 {
  background:transparent url('../img/website_photos-1001-xsm.jpg') no-repeat center center /cover;
}

.carousel-item-9 {
  background:transparent url('../img/website_photos-1007-xsm.jpg') no-repeat center center /cover;
}

.carousel-indicators button {
  margin: 2px;
  background-color: rgba(0, 0, 0, .75);
}

.carousel-indicators button.active {
  margin: 2px;
  background-color: rgba(99, 99, 99, .75);
}

.carousel-control-next,
.carousel-control-prev {
    filter: invert(100%);
}

.carousel-control-next-icon,
.carousel-control-prev-icon {
  width: 30px;
  height: 30px;
}

/* Custom translucent site header */
.site-header {
  background-color: rgba(0, 0, 0, .85);
  -webkit-backdrop-filter: saturate(180%) blur(20px);
  backdrop-filter: saturate(180%) blur(20px);
}

.site-header a {
  color: #999;
  transition: ease-in-out color .15s;
}

.site-header a:hover {
  color: #fff;
  text-decoration: none;
}

.translucent-effect {
  background-color: rgba(0, 0, 0, 0);
}

/*
 * Extra utilities
 */

.flex-equal > * {
  -ms-flex: 1;
  flex: 1;
}

/*@media (min-width: 768px) {
  .flex-md-equal > * {
    -ms-flex: 1;
    flex: 1;
  }
}*/

.overflow-hidden { overflow: hidden; }

.container-fluid {
  padding-left: 0px;
  padding-right: 0px;
}

.brand {
  margin: 20px;
  height: 24px;
}

